--- a/public/gui/css/app.less
+++ b/public/gui/css/app.less
@@ -18,32 +18,44 @@ footer, header, nav, section, audio, video {
 a img {border: 0;}
 
 body {
-	font:15px arial,sans-serif;
-	font-size:0.875em;
+	font:1em arial,sans-serif;
+	font-weight: 300;
+
 	color:#ffffff;
-	background-color: #333333;
+	background-color: #000000;
+
 }
+
+@truckerColor:#016fde;
+@activePlayerColor:#a3d771;
+@playerLostColor:#f388ae;
 
 .inactive {
 	display:none;
 }
 
 .player-lost {
-	color:#CC0000;
+	color:@playerLostColor;
 }
 .player-turn {
-	color:#00CC00;
+	color:@activePlayerColor;
 }
 
 .app {
+	padding: 1em;
+	background-color: #000000;
 
-	background-color: #cfcfcf;
+	.header {
+		strong {
+			font-size: 1.5em;
+		}
+	}
 }
 
 .centered-box {
 	margin: 0 auto;
 	text-align: center;
-	width: 50%;
+	//width: 80%;
 }
 
 //* html .centered-box {
@@ -51,28 +63,34 @@ body {
 //}
 .trucker-status {
 	margin: 1em 1em;
-	color: #5555cc;
+	color: @truckerColor;
+}
+
+.trucker-chat-holder {
+
+	width:100%;
+	.trucker-chat {
+
+	}
 }
 
 .game-screen {
-
 	.player-list {
 		.data-table {
 			width:100%;
+			height:100%;
 			margin-left:auto;
 			margin-right:auto;
 			td:first-child {
 				text-align: right;
 			}
 			td {
-				padding: 1em 0.5em;
+				padding: 0.5em 0.5em;
 				width:50%;
 				text-align: left;
 			}
 		}
 	}
-
-
 }
 
 .join-game-screen {
@@ -83,6 +101,7 @@ body {
 		display: inline;
 	}
 }
+
 .answer-form {
 	.answer-form {
 		display: inline;
@@ -92,7 +111,29 @@ body {
 	}
 }
 
+.list-info {
+
+	.data-table {
+		width:100%;
+		margin-left:auto;
+		margin-right:auto;
+		td:first-child {
+			text-align: right;
+		}
+		td {
+			vertical-align: sub;
+			padding: 0em 0.5em;
+			width:50%;
+			text-align: left;
+		}
+	}
+	font-size: 1.5em;
+	strong {
+		font-size: 2.5em;
+	}
+}
+
 // temp
 table, tr, td {
-	border: 1px solid black;
+	//border: 1px solid black;
 }
