--- a/public/gui/css/app.css
+++ b/public/gui/css/app.css
@@ -97,6 +97,35 @@ body {
   color: #ffffff;
   background-color: #000000;
 }
+input.rounded {
+  background-color: #111;
+  color: #016fde;
+  border: 1px solid #016fde;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
+  -moz-box-shadow: 0px -2px 3px #333333;
+  -webkit-box-shadow: 0px -2px 3px #333333;
+  box-shadow: 0px -2px 3px #333333;
+  font-size: 1em;
+  padding: 4px 7px;
+  outline: 0;
+  -webkit-appearance: none;
+  height: 2.5em;
+}
+input.rounded:focus {
+  border-color: #a3d771;
+}
+button {
+  background-color: #333;
+  color: #a3d771;
+  border: 1px solid #016fde;
+  font-size: 1em;
+  padding: 1em;
+  border-radius: 50px;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+}
 .inactive {
   display: none;
 }
@@ -105,6 +134,9 @@ body {
 }
 .player-turn {
   color: #a3d771;
+}
+.logo-img {
+  margin-right: 0em	;
 }
 .app {
   padding: 1em;
